  o Added sorting functionality for both storage and current script. (AMZ)
  o Prevent creating multiple storages with the same names. (AMZ)
- Style editor changes:
  o Prevent creating multiple styles with the same names. (AMZ)
  o New, more horizontal, layout (AMZ)
  o Realtime preview box (AMZ)
  o Hitting enter on style editor will now "OK" it. (AMZ)
- Changes to subtitle reading/writing:
  o Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
  o Fixed loading of sections with unexpected casing. (AMZ)
  o Added plain-text export (jfs)
  o Added support for reading ASS, SSA and SRT softsubs directly from Matroska files. (AMZ)
  o Fixed loading of SRT and TXT files, which were causing an empty line to appear at the start of the file. (AMZ)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Video display fixed on Linux and maybe also Mac (Azzy)
- Misc. fixes for building on Linux (Azzy, equinox, jfs)
- libass support for subtitles on UNIX (Azzy)
- Redesigned the FexTracker configuration window (jfs)
- Framegrabs from the video now also includes framenumber in the filename (jfs)
- Scrollbar in main subs grid didn't always allow scrolling through all the subs (jfs)
- Added a "Auto Save on Every Change" option to config.dat (default false), that automatically saves the files whenever you change anything. (AMZ)
- Fixed line selection after pasting. (AMZ)
- Times can now be copy and pasted with ctrl+c and Ctrl+V, as well as from context menu, in the time edit boxes. (AMZ)
- Plain-text lines can now be pasted into the grid. They will be inserted as default lines with the text as their content. (AMZ)
- Added Paste Over function, which allows you to paste subtitle lines over others, overwriting the fields of your choice. (AMZ)
- Added global hotkey for Video Play (default Ctrl+P). (AMZ)
- Added support to save and load keyframe list files. (AMZ)