@@ -49,7 +49,9 @@ Please visit http://aegisub.net to download latest version
   o Prevent creating multiple styles with the same names. (AMZ)
   o New, more horizontal, layout (AMZ)
   o Realtime preview box (AMZ)
-  o Hitting enter on style editor will now "OK" it. (AMZ)
+  o Editable drop-down (combo box) to select fonts, instead of the OS's standard font chooser. This allows easy realtime preview of fonts. (AMZ)
+  o Alpha boxes now use spin controls. (AMZ)
+  o Hitting enter will now "OK" it. (AMZ)
 - Changes to subtitle reading/writing:
   o Support reading SSA/ASS files with intermixed V4 and V4+ Styles sections. (jfs)
   o Fixed loading of sections with unexpected casing. (AMZ)
@@ -122,7 +124,6 @@ Please visit http://aegisub.net to download latest version
 - Added a "Scale Border and Shadow" check box to script properties dialog. (AMZ)
 - Fixed drawing of inactive lines in audio display to prevent it from being drawn over selection. (AMZ)
 - Commiting text now commits times as well. (AMZ)
-- Changed the Style Editor to have an editable drop-down (combo box) to select fonts, instead of the OS's standard font chooser. This allows easy realtime preview of fonts. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
